--- a/index.html
+++ b/index.html
@@ -16006,7 +16006,7 @@ Picker.extend( 'pickadate', DatePicker )
 			<!--:::::::::::::::::::::TEMA PRINCIPAL-->
 			<div class="row">
 				 <div class="cols s12" style="text-align: center;">
-				 	<h2>Terapia para casais:</h2><br>
+				 	<h2>Workshop para casais:</h2><br>
 				 	<h3 style="margin-top: -30px">Se <strong style="color: red;">eu</strong> fosse <strong style="color: red;">Você</strong>...</h3>
 				 </div>
 			</div>
@@ -16021,19 +16021,13 @@ Picker.extend( 'pickadate', DatePicker )
 		          <div class="card">
 		            <div class="card-image">
 		              <img src="images.jpeg">
-		              <span class="card-title black-text" style="color:red">Não caia nesses erros!</span>
+		              <span class="card-title black-text" style="color:red">O amor pode tudo?</span>
 		            </div>
-		            <div class="card-content"><p>
-						Tem sido notório os problemas que namorados
-						e recem casados têm enfrentado nas vidas extra-conjugais mas
-						isso não necessariamente quer dizer que o casal não se ame ou que não sejam 
-						suficientemente maduro. <br>
-						Tem outros factores... 
+		            <div class="card-content"><p style="fonte-size: 17pt">Sim e não. Não basta haver amor para que as coisas andem sempre bem, inclusive quando o amor é tão grande a ponto de expressar-se em ações. Há coisas que devemos saber para que nosso relacionamento funcione melhor. Venha descobrir connosco, participando do nosso workshop.
 					</p>
 		            </div>
 		            <div class="card-action">
-		              <a class="modal-trigger waves-effect waves-light" href="#modal1" style="color: red; font-size: 18pt">Continuar lendo?</a>
-		              <a class="waves-effect waves-light" href="https://m.facebook.com/groups/709400059762499/" style="color: red; font-size: 18pt">Ver mais no Facebook</a>
+				    <a class="waves-effect waves-light" href="https://m.facebook.com/groups/709400059762499/" style="color: red; font-size: 18pt">Ver mais no Facebook</a>
 		            </div>
 		          </div>
 		        </div>
@@ -16042,14 +16036,11 @@ Picker.extend( 'pickadate', DatePicker )
 		          <div class="card">
 		            <div class="card-image">
 		              <img src="net.jpg">
-		              <span class="card-title black-text" style="color: red">Se eu fosse você!</span>
+		              <span class="card-title black-text" style="color: red">5 passos efetivos para relacionamentos mais afetivos!</span>
 		            </div>
-		            <div class="card-content"><p>
-						Tem sido notório os problemas que namorados
-						e recem casados têm enfrentado nas vidas extra-conjugais mas
-						isso não necessariamente quer dizer que o casal não se ame ou que não sejam 
-						suficientemente maduro. <br>
-						Tem outros factores... 
+		            <div class="card-content"><p style="fonte-size: 17pt">1- Nunca minta para seu cônjuge. A mentira só leva à falta de confiança, dúvidas e ressentimentos. É o principal veneno da comunicação.</br>
+
+2-Talvez você precise mais de uma opinião especializada do que um ombro amigo, por melhor que sejam as intenções nesse caso. O que acha, então, de ir em busca da solução?
 					</p>
 		            </div>
 		            <div class="card-action">
@@ -16063,15 +16054,17 @@ Picker.extend( 'pickadate', DatePicker )
 	        <!--::::::::::::::::::::::::MODAL-->
 	         <div id="modal1" class="modal modal-fixed-footer">
 			    <div class="modal-content">
-			      <h4>Relações hoje em dia...</h4>
-			      <p>Tem sido notório os problemas que namorados
-						e recem casados têm enfrentado nas vidas extra-conjugais mas
-						isso não necessariamente quer dizer que o casal não se ame ou que não sejam 
-						suficientemente maduro. <br>
-						Tem outros factores que contribuem fortemente para uma vida
-						amorosa desastrosa ou prospera e amorosa. Sabendo disso
-						gostariamos de partilhar contigo os 6 segredos dos casais que
-						deram certo!</p>
+			      <h2>Relações hoje em dia...</h2>
+			      <p style="fonte-size: 18pt">3-Não tente moldar a outra pessoa conforme os seus interesses e preferências.
+				      Respeite a individualidade e valorize as qualidades do parceiro ou parceira.</br>
+
+4- O amor deve ser cultivado com uma nova conquista a cada dia.
+Não deixe que a rotina os impeça de se apaixonar novamente um pelo outro.
+			 Lembre-se daquilo que gerou encantos anteriormente e procure repetir a experiência.</br>
+
+5- Muito mais interessante do que superestimar os problemas é aproveitar as pequenas conquistas.
+Um elogio, um sorriso, um gesto de carinho.
+Tudo isso tem muito mais valor do que imagina.</p>
 			    </div>
 			    <div class="modal-footer">
 			      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Fechar</a>
@@ -16084,17 +16077,21 @@ Picker.extend( 'pickadate', DatePicker )
 			    <li>
 			      <div class="collapsible-header">
 			      Local/ Dia e Hora</div>
-			      <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+				    <div class="collapsible-body"><p style="fonte-size: 18pt">
+					    Projecto Nova vida</br>
+				    Rua 06</br>
+Vivenda nº 191</br>
+Referência: ENDE</p></div>
 			    </li>
 			    <li>
 			      <div class="collapsible-header">
 			      	Reservas</div>
-			      <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+			      <div class="collapsible-body"><p style="fonte-size: 18pt">Pelo FACEBOOK prla nossa linha de atendimento: 924 058 087.</p></div>
 			    </li>
 			    <li>
 			      <div class="collapsible-header">
 			      	Prolectores</div>
-			      <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+			      <div class="collapsible-body"><p style="fonte-size: 18pt">Dra Emília pinto </p></div>
 			    </li>
 		  </ul>
 			<!--::::::::::::::::::::::::COLAPSE-->
