--- a/index.html
+++ b/index.html
@@ -15975,18 +15975,7 @@ Picker.extend( 'pickadate', DatePicker )
 	    <div class="nav-wrapper" style="background: #383C41">
 	      <a href="#!" class="brand-logo"><img src="logo.png" alt=""></a>
 	      <a href="#" class="hide" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-	      <ul class="right hide-on-med-and-down">
-	        <li><a href="sass.html">Sass</a></li>
-	        <li><a href="badges.html">Components</a></li>
-	        <li><a href="collapsible.html">Javascript</a></li>
-	        <li><a href="mobile.html">Mobile</a></li>
-	      </ul>
-	      <ul class="side-nav" id="mobile-demo">
-	        <li><a href="sass.html">Sass</a></li>
-	        <li><a href="badges.html">Components</a></li>
-	        <li><a href="collapsible.html">Javascript</a></li>
-	        <li><a href="mobile.html">Mobile</a></li>
-	      </ul>
+	     
 	    </div>
 	 </nav>
 	<!--
@@ -16021,9 +16010,9 @@ Picker.extend( 'pickadate', DatePicker )
 		          <div class="card">
 		            <div class="card-image">
 		              <img src="images.jpeg">
-		              <span class="card-title black-text" style="color:red">O amor pode tudo?</span>
+		              <span class="card-title black-text" style="color:red; style="font-size: 19pt">O amor pode tudo?</span>
 		            </div>
-		            <div class="card-content"><p style="fonte-size: 17pt">Sim e não. Não basta haver amor para que as coisas andem sempre bem, inclusive quando o amor é tão grande a ponto de expressar-se em ações. Há coisas que devemos saber para que nosso relacionamento funcione melhor. Venha descobrir connosco, participando do nosso workshop.
+		            <div class="card-content"><p style="font-size: 17pt">Sim e não. Não basta haver amor para que as coisas andem sempre bem, inclusive quando o amor é tão grande a ponto de expressar-se em ações. Há coisas que devemos saber para que nosso relacionamento funcione melhor. Venha descobrir connosco, participando do nosso workshop.
 					</p>
 		            </div>
 		            <div class="card-action">
@@ -16036,9 +16025,9 @@ Picker.extend( 'pickadate', DatePicker )
 		          <div class="card">
 		            <div class="card-image">
 		              <img src="net.jpg">
-		              <span class="card-title black-text" style="color: red">5 passos efetivos para relacionamentos mais afetivos!</span>
+		              <span class="card-title black-text" style="color: red; style="font-size: 19pt">5 passos efetivos para relacionamentos mais afetivos!</span>
 		            </div>
-		            <div class="card-content"><p style="fonte-size: 17pt">1- Nunca minta para seu cônjuge. A mentira só leva à falta de confiança, dúvidas e ressentimentos. É o principal veneno da comunicação.</br>
+		            <div class="card-content"><p style="font-size: 17pt">1- Nunca minta para seu cônjuge. A mentira só leva à falta de confiança, dúvidas e ressentimentos. É o principal veneno da comunicação.</br>
 
 2-Talvez você precise mais de uma opinião especializada do que um ombro amigo, por melhor que sejam as intenções nesse caso. O que acha, então, de ir em busca da solução?
 					</p>
@@ -16055,7 +16044,7 @@ Picker.extend( 'pickadate', DatePicker )
 	         <div id="modal1" class="modal modal-fixed-footer">
 			    <div class="modal-content">
 			      <h2>Relações hoje em dia...</h2>
-			      <p style="fonte-size: 18pt">3-Não tente moldar a outra pessoa conforme os seus interesses e preferências.
+			      <p style="font-size: 18pt">3-Não tente moldar a outra pessoa conforme os seus interesses e preferências.
 				      Respeite a individualidade e valorize as qualidades do parceiro ou parceira.</br>
 
 4- O amor deve ser cultivado com uma nova conquista a cada dia.
@@ -16075,23 +16064,23 @@ Tudo isso tem muito mais valor do que imagina.</p>
 			<!--::::::::::::::::::::::::COLAPSE-->
 			<ul class="collapsible popout" data-collapsible="accordion">
 			    <li>
-			      <div class="collapsible-header">
+			      <div class="collapsible-header" style="font-size: 18pt">
 			      Local/ Dia e Hora</div>
-				    <div class="collapsible-body"><p style="fonte-size: 18pt">
+				    <div class="collapsible-body"><p style="font-size: 18pt">
 					    Projecto Nova vida</br>
 				    Rua 06</br>
 Vivenda nº 191</br>
 Referência: ENDE</p></div>
 			    </li>
 			    <li>
-			      <div class="collapsible-header">
+			      <div class="collapsible-header" style="font-size: 18pt" >
 			      	Reservas</div>
-			      <div class="collapsible-body"><p style="fonte-size: 18pt">Pelo FACEBOOK prla nossa linha de atendimento: 924 058 087.</p></div>
+			      <div class="collapsible-body"><p style="font-size: 18pt">Pelo FACEBOOK prla nossa linha de atendimento: 924 058 087.</p></div>
 			    </li>
 			    <li>
-			      <div class="collapsible-header">
+			      <div class="collapsible-header" style="font-size: 18pt">
 			      	Prolectores</div>
-			      <div class="collapsible-body"><p style="fonte-size: 18pt">Dra Emília pinto </p></div>
+			      <div class="collapsible-body"><p style="font-size: 18pt">Dra Emília pinto </p></div>
 			    </li>
 		  </ul>
 			<!--::::::::::::::::::::::::COLAPSE-->
