--- a/index.html
+++ b/index.html
@@ -16010,9 +16010,9 @@ Picker.extend( 'pickadate', DatePicker )
 		          <div class="card">
 		            <div class="card-image">
 		              <img src="images.jpeg">
-		              <span class="card-title black-text" style="color:red; style="font-size: 19pt">O amor pode tudo?</span>
+		              <span class="black-text" style="color:red; style="font-size: 22pt; margin-top: -20px">O amor pode tudo?</span>
 		            </div>
-		            <div class="card-content"><p style="font-size: 17pt">Sim e não. Não basta haver amor para que as coisas andem sempre bem, inclusive quando o amor é tão grande a ponto de expressar-se em ações. Há coisas que devemos saber para que nosso relacionamento funcione melhor. Venha descobrir connosco, participando do nosso workshop.
+		            <div class="card-content"><p style="font-size: 21pt">Sim e não. Não basta haver amor para que as coisas andem sempre bem, inclusive quando o amor é tão grande a ponto de expressar-se em ações. Há coisas que devemos saber para que nosso relacionamento funcione melhor. Venha descobrir connosco, participando do nosso workshop.
 					</p>
 		            </div>
 		            <div class="card-action">
@@ -16025,9 +16025,9 @@ Picker.extend( 'pickadate', DatePicker )
 		          <div class="card">
 		            <div class="card-image">
 		              <img src="net.jpg">
-		              <span class="card-title black-text" style="color: red; style="font-size: 19pt">5 passos efetivos para relacionamentos mais afetivos!</span>
+		              <span class="black-text" style="color: red; style="font-size: 22pt; margin-top: -20px">5 passos efetivos para relacionamentos mais afetivos!</span>
 		            </div>
-		            <div class="card-content"><p style="font-size: 17pt">1- Nunca minta para seu cônjuge. A mentira só leva à falta de confiança, dúvidas e ressentimentos. É o principal veneno da comunicação.</br>
+		            <div class="card-content"><p style="font-size: 21pt">1- Nunca minta para seu cônjuge. A mentira só leva à falta de confiança, dúvidas e ressentimentos. É o principal veneno da comunicação.</br>
 
 2-Talvez você precise mais de uma opinião especializada do que um ombro amigo, por melhor que sejam as intenções nesse caso. O que acha, então, de ir em busca da solução?
 					</p>
@@ -16044,7 +16044,7 @@ Picker.extend( 'pickadate', DatePicker )
 	         <div id="modal1" class="modal modal-fixed-footer">
 			    <div class="modal-content">
 			      <h2>Relações hoje em dia...</h2>
-			      <p style="font-size: 18pt">3-Não tente moldar a outra pessoa conforme os seus interesses e preferências.
+			      <p style="font-size: 24pt">3-Não tente moldar a outra pessoa conforme os seus interesses e preferências.
 				      Respeite a individualidade e valorize as qualidades do parceiro ou parceira.</br>
 
 4- O amor deve ser cultivado com uma nova conquista a cada dia.
@@ -16064,23 +16064,23 @@ Tudo isso tem muito mais valor do que imagina.</p>
 			<!--::::::::::::::::::::::::COLAPSE-->
 			<ul class="collapsible popout" data-collapsible="accordion">
 			    <li>
-			      <div class="collapsible-header" style="font-size: 18pt">
+			      <div class="collapsible-header" style="font-size: 20pt">
 			      Local/ Dia e Hora</div>
-				    <div class="collapsible-body"><p style="font-size: 18pt">
+				    <div class="collapsible-body"><p style="font-size: 20pt">
 					    Projecto Nova vida</br>
 				    Rua 06</br>
 Vivenda nº 191</br>
 Referência: ENDE</p></div>
 			    </li>
 			    <li>
-			      <div class="collapsible-header" style="font-size: 18pt" >
+			      <div class="collapsible-header" style="font-size: 20pt" >
 			      	Reservas</div>
-			      <div class="collapsible-body"><p style="font-size: 18pt">Pelo FACEBOOK prla nossa linha de atendimento: 924 058 087.</p></div>
+			      <div class="collapsible-body"><p style="font-size: 20pt">Pelo FACEBOOK prla nossa linha de atendimento: 924 058 087.</p></div>
 			    </li>
 			    <li>
-			      <div class="collapsible-header" style="font-size: 18pt">
+			      <div class="collapsible-header" style="font-size: 20pt">
 			      	Prolectores</div>
-			      <div class="collapsible-body"><p style="font-size: 18pt">Dra Emília pinto </p></div>
+			      <div class="collapsible-body"><p style="font-size: 20pt">Dra Emília pinto </p></div>
 			    </li>
 		  </ul>
 			<!--::::::::::::::::::::::::COLAPSE-->
