--- a/index.html
+++ b/index.html
@@ -16010,9 +16010,9 @@ Picker.extend( 'pickadate', DatePicker )
 		          <div class="card">
 		            <div class="card-image">
 		              <img src="images.jpeg">
-		              <span class="black-text" style="color:red; style="font-size: 22pt; margin-top: -20px">O amor pode tudo?</span>
+		              <h2 class="black-text" style="color:red; style="font-size: 22pt">O amor pode tudo?</h2>
 		            </div>
-		            <div class="card-content"><p style="font-size: 21pt">Sim e não. Não basta haver amor para que as coisas andem sempre bem, inclusive quando o amor é tão grande a ponto de expressar-se em ações. Há coisas que devemos saber para que nosso relacionamento funcione melhor. Venha descobrir connosco, participando do nosso workshop.
+		            <div class="card-content"><p style="font-size: 24pt">Sim e não. Não basta haver amor para que as coisas andem sempre bem, inclusive quando o amor é tão grande a ponto de expressar-se em ações. Há coisas que devemos saber para que nosso relacionamento funcione melhor. Venha descobrir connosco, participando do nosso workshop.
 					</p>
 		            </div>
 		            <div class="card-action">
@@ -16025,9 +16025,9 @@ Picker.extend( 'pickadate', DatePicker )
 		          <div class="card">
 		            <div class="card-image">
 		              <img src="net.jpg">
-		              <span class="black-text" style="color: red; style="font-size: 22pt; margin-top: -20px">5 passos efetivos para relacionamentos mais afetivos!</span>
+		              <h2 class="card-title black-text" style="color: red; style="font-size: 22pt">5 passos efetivos para relacionamentos mais afetivos!</h2>
 		            </div>
-		            <div class="card-content"><p style="font-size: 21pt">1- Nunca minta para seu cônjuge. A mentira só leva à falta de confiança, dúvidas e ressentimentos. É o principal veneno da comunicação.</br>
+		            <div class="card-content"><p style="font-size: 24pt">1- Nunca minta para seu cônjuge. A mentira só leva à falta de confiança, dúvidas e ressentimentos. É o principal veneno da comunicação.</br>
 
 2-Talvez você precise mais de uma opinião especializada do que um ombro amigo, por melhor que sejam as intenções nesse caso. O que acha, então, de ir em busca da solução?
 					</p>
@@ -16044,7 +16044,10 @@ Picker.extend( 'pickadate', DatePicker )
 	         <div id="modal1" class="modal modal-fixed-footer">
 			    <div class="modal-content">
 			      <h2>Relações hoje em dia...</h2>
-			      <p style="font-size: 24pt">3-Não tente moldar a outra pessoa conforme os seus interesses e preferências.
+			      <p style="font-size: 27pt">1- Nunca minta para seu cônjuge. A mentira só leva à falta de confiança, dúvidas e ressentimentos. É o principal veneno da comunicação.</br>
+
+2-Talvez você precise mais de uma opinião especializada do que um ombro amigo, por melhor que sejam as intenções nesse caso. O que acha, então, de ir em busca da solução?
+					3-Não tente moldar a outra pessoa conforme os seus interesses e preferências.
 				      Respeite a individualidade e valorize as qualidades do parceiro ou parceira.</br>
 
 4- O amor deve ser cultivado com uma nova conquista a cada dia.
