--- a/index.html
+++ b/index.html
@@ -16010,7 +16010,7 @@ Picker.extend( 'pickadate', DatePicker )
 		          <div class="card">
 		            <div class="card-image">
 		              <img src="images.jpeg">
-		              <h2 class="black-text" style="color:red; style="font-size: 22pt">O amor pode tudo?</h2>
+		              <h2 class="black-text" style="color:red; style="font-size: 22pt; margin-to: -25px ">O amor pode tudo?</h2>
 		            </div>
 		            <div class="card-content"><p style="font-size: 24pt">Sim e não. Não basta haver amor para que as coisas andem sempre bem, inclusive quando o amor é tão grande a ponto de expressar-se em ações. Há coisas que devemos saber para que nosso relacionamento funcione melhor. Venha descobrir connosco, participando do nosso workshop.
 					</p>
@@ -16025,7 +16025,7 @@ Picker.extend( 'pickadate', DatePicker )
 		          <div class="card">
 		            <div class="card-image">
 		              <img src="net.jpg">
-		              <h2 class="card-title black-text" style="color: red; style="font-size: 22pt">5 passos efetivos para relacionamentos mais afetivos!</h2>
+		              <h2 class=" black-text" style="color: red; style="font-size: 22pt; margin-to: -25px">5 passos efetivos para relacionamentos mais afetivos!</h2>
 		            </div>
 		            <div class="card-content"><p style="font-size: 24pt">1- Nunca minta para seu cônjuge. A mentira só leva à falta de confiança, dúvidas e ressentimentos. É o principal veneno da comunicação.</br>
 
